--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,9 @@
     </section>
   </main>
 
+  <script src="renderers/text.js"></script>
+  <script src="renderers/image.js"></script>
   <script src="app.js"></script>
+
 </body>
 </html>
