add option to render image

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,9 @@
           <ul id="assetList" class="asset-list">
             <li data-view="cpu" class="selected">CPU / RAM / Temp</li>
             <li data-view="network">Network / Battery / Uptime</li>
+            <li data-view="image">Set Image</li>
           </ul>
+          <input type="file" id="imageInput" accept="image/*" style="display:none" />
 
         <button id="setBtn" class="primary-btn" disabled>
           Set Asset
